# cs4288_p2_insta4288_serverside

./: .gitignore  deployed_insta4288.html  pyproject.toml  requirements.txt
insta4288/: __init__.py  config.py  model.py
insta4288.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
insta4288/static/css/: style.css
insta4288/templates/: accounts.html  accounts_create.html  accounts_delete.html  accounts_edit.html  accounts_password.html  explore.html  followers.html  following.html  index.html  post.html  user.html
insta4288/views/: __init__.py  accounts.py  accounts_create.py  accounts_manage.py  actions.py  auth_gate.py  explore.py  index.py  posts.py  uploads.py  users.py
sql/: data.sql  schema.sql
tests/app_tests/: conftest.py  test_accounts_public.py  test_explore.py  test_follow_unfollow.py  test_followers_public.py  test_following.py  test_index.py  test_login_logout.py  test_michjc.py  test_post_public.py  test_scripts.py  test_style.py  test_user_public.py
tests/db_tests/: conftest.py  test_database_public.py
var/: insta4288.sqlite3
